# Sirocco

./: .envrc  .gitignore  404.html  README.md  SLURM_PRE_SUBMISSION.md  WORKGRAPH_REFACTORING_SUMMARY.md  aiida-icon-link-dir-contents-race-condition.md  index.html  install_santis.sh  launch_install_santis.sh  plot_job_timeline.py  pyproject.toml  sitemap.xml  spack.yaml  xing-wg-pre-submission.bak.py  xing-wg-pre-submission.py
.github/config/: README.md  slurm-local.yaml  slurm-ssh-config.yaml
.github/workflows/: ci.yaml  publish-docs.yml  publish-pypi.yml  setup.sh  setup_slurm.sh  test-integration.yml  test-mbianco.yml
ADR/: AiiDA_Engine_Architecture.md  DYNAMIC_LEVELS_IMPLEMENTATION.md  ENV_VAR_SUBSTITUTION.md  EXECUTION_FLOW.md  INTEGRATION_TEST_SUMMARY.md  Standalone_orchestration.md  Store_and_Array_Design.md
ADR/workgraph/: DYNAMIC_LEVELS_IMPLEMENTATION.md
EquationOfStateWorkChain-1113585/: README.md  aiida_dump_log.json  aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/01-scale_structure-1113746/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/01-scale_structure-1113746/inputs/: source_file
EquationOfStateWorkChain-1113585/02-QuantumEspressoCommonRelaxWorkChain-1114126/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/02-QuantumEspressoCommonRelaxWorkChain-1114126/01-PwRelaxWorkChain-1114384/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/02-QuantumEspressoCommonRelaxWorkChain-1114126/02-extract_from_parameters-1124035/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/02-QuantumEspressoCommonRelaxWorkChain-1114126/03-extract_from_trajectory-1124124/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/03-scale_structure-1125111/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/04-QuantumEspressoCommonRelaxWorkChain-1125160/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/04-QuantumEspressoCommonRelaxWorkChain-1125160/01-PwRelaxWorkChain-1125552/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/04-QuantumEspressoCommonRelaxWorkChain-1125160/02-extract_from_parameters-1140733/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/04-QuantumEspressoCommonRelaxWorkChain-1125160/03-extract_from_trajectory-1140783/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/05-scale_structure-1125162/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/06-QuantumEspressoCommonRelaxWorkChain-1125214/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/06-QuantumEspressoCommonRelaxWorkChain-1125214/01-PwRelaxWorkChain-1125394/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/06-QuantumEspressoCommonRelaxWorkChain-1125214/02-extract_from_parameters-1133318/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/06-QuantumEspressoCommonRelaxWorkChain-1125214/03-extract_from_trajectory-1133986/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/07-scale_structure-1125219/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/08-QuantumEspressoCommonRelaxWorkChain-1125318/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/08-QuantumEspressoCommonRelaxWorkChain-1125318/01-PwRelaxWorkChain-1125650/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/08-QuantumEspressoCommonRelaxWorkChain-1125318/02-extract_from_parameters-1140815/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/08-QuantumEspressoCommonRelaxWorkChain-1125318/03-extract_from_trajectory-1140899/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/09-scale_structure-1125322/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/10-QuantumEspressoCommonRelaxWorkChain-1125353/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/10-QuantumEspressoCommonRelaxWorkChain-1125353/01-PwRelaxWorkChain-1126816/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/10-QuantumEspressoCommonRelaxWorkChain-1125353/02-extract_from_parameters-1135801/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/11-scale_structure-1125357/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/12-QuantumEspressoCommonRelaxWorkChain-1126742/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/13-scale_structure-1126744/: aiida_node_metadata.yaml
EquationOfStateWorkChain-1113585/14-QuantumEspressoCommonRelaxWorkChain-1126842/: aiida_node_metadata.yaml
MultiplyAddWorkChain-5707/: README.md  aiida_dump_log.json  aiida_node_metadata.yaml
MultiplyAddWorkChain-5707/01-multiply-5708/: aiida_node_metadata.yaml
MultiplyAddWorkChain-5707/02-ArithmeticAddCalculation-5710/: aiida_node_metadata.yaml
acknowledgements/: index.html
ci/: cscs.yml
docs/: mkdocs.yml
docs/src/: acknowledgements.md  index.md
examples/DYAMOND_cwd01/: config.yaml  prepare_input.sh  run.sh  run_via_cli.sh
examples/DYAMOND_leclairm/: config.yaml  prepare_input.sh
html/: AQUAPLANET.html
scripts/: plot_job_timeline.py  plot_job_timeline_complex.py  plot_slurm_job_phases.py  verify_workflow_arithmetic.py
search/: search_index.json
src/sirocco/: ADR.md  __init__.py  cli.py  pretty_print.py  test.py  vizgraph.py  workgraph-dependency-no_data.py  workgraph-socket-linking.py  workgraph.py
src/sirocco/core/: __init__.py  enums.py  (+4 more)
tests/: TESTING.md  conftest.py  test_cli.py  test_sirocco_workflow.py  test_wc_workflow.py  test_workgraph.py  utils.py
tests/cases/: analyze.py
tests/integration/: test_icon_sanity.py  test_workgraph.py  utils.py
tests/unit/: test_core_workflow.py  test_vizgraph.py  utils.py
tests/unit_tests/: test_cli.py  test_dynamic_levels.py  test_utils.py  test_workgraph.py  utils.py
(+348 files in other folders)
