[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = 'sirocco'
dynamic = ["version"]
description = 'A library for creating weather and climate workflows.'
authors = [
  {name = 'Matthieu Leclair', email = 'matthieu.leclair@env.ethz.ch'},
  {name = 'Julian Geiger', email = 'julian.geiger@psi.ch'},
  {name = 'Alexander Goscinski', email = 'alexander.goscinski@psi.ch'},
]
readme = 'README.md'
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: Science/Research',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Atmospheric Science',
  'License :: OSI Approved :: MIT License',
]
keywords = ["workflow"," icon", "aiida", "aiida-workgraph"]
requires-python = '>=3.10'
dependencies = [
  "numpy",
  "isoduration",
  "pydantic",
  "ruamel.yaml",
  # "aiida-core==2.7.1",
  # "aiida-core@git+https://github.com/aiidateam/aiida-core.git@f21bcd49d60b2e35b8b4df417f46ac15bd5bc861",
  "aiida-core@git+https://github.com/aiidateam/aiida-core.git",
  # "aiida-firecrest@git+https://github.com/aiidateam/aiida-firecrest.git@edab99ac6808c0ccfc63329d365654f54deacf5e",
  "aiida-firecrest@git+https://github.com/aiidateam/aiida-firecrest.git@c4e287ffe40ae57db7032fe1c80d2c4def0dc7fa",
  # "pyfirecrest",
  # "aiida-icon @ git+https://github.com/aiida-icon/aiida-icon.git@add-arbitrary-inputs",
  "aiida-icon @ git+https://github.com/aiida-icon/aiida-icon.git@dyamond-changes",
  # "aiida-workgraph==1.0.0b4",  # need latest for presubmission
  # "aiida-workgraph @ git+https://github.com/GeigerJ2/aiida-workgraph.git@task-window-dynamic",  # <-- now in `patches/` in Sirocco
  "aiida-workgraph @git+https://github.com/aiidateam/aiida-workgraph.git",
  "aiida-gui",
  "aiida-gui-workgraph",
  "ipdb",
  "termcolor",
  "pygraphviz",
  "lxml",
  "f90nml",
  "aiida-shell>=0.8.1",
  "rich~=14.0",
  "typer~=0.16.0",
  "aiida-gui-workgraph>=0.1.3",
  "jinja2>=3.0",
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/C2SM/Sirocco.git"
Documentation = "https://c2sm.github.io/Sirocco/"
Changelog = "https://github.com/C2SM/Sirocco/blob/main/CHANGELOG.md"

[project.scripts]
sirocco = "sirocco.cli:app"

[tool.pytest.ini_options]
# Configuration for [pytest](https://docs.pytest.org)
log_level = "ERROR"
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
norecursedirs = "tests/cases"
markers = [
  "slow: slow integration tests which are not recommended to run locally for normal development",
  "requires_icon: marks test to require icon installation"
]

filterwarnings = [
  "ignore::UserWarning",
  'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',  # from aio_pika via duration
  "ignore:There is no current event loop:DeprecationWarning",  # from plumpy via aiida testing tools
  "ignore:Object of type <DbNode> not in session:sqlalchemy.exc.SAWarning",  # sqlalchemy via aiida testing tools
]

[tool.coverage.run]
# Configuration of [coverage.py](https://coverage.readthedocs.io)
# reporting which lines of your plugin are covered by tests
source = ["sirocco"]

[tool.ruff]
include = ["src/*py", "tests/*py"]
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "TID252", # prefer relative import over absolute
  "TRY003", # write custom error messages for formatting
  "PLC0415", # import should be at the top-level of a file
  "E402", # module level import not at top of file
  "N806", # variable in function should be lowercase
  "SLF001", # private member accessed

]

## Hatch configurations

[tool.hatch.build.targets.sdist]
include = [
  "src/sirocco/",
]

[tool.hatch.version]
path = "src/sirocco/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
installer = "uv"
python = "3.12"

[tool.hatch.envs.hatch-test]
installer = "uv"
extra-dependencies = [
    "ipdb"
]
default-args = []
extra-args = ["--doctest-modules", "-m", "not slow and not requires_icon"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12"]

[tool.hatch.envs.docs]
installer = "uv"
description = "Build the documentation"
extra-dependencies = [
    "mkdocs-material",
]

[tool.hatch.envs.docs.scripts]
build = [
  "mkdocs build -f docs/mkdocs.yml",
  "echo 'Now open docs/build/index.html with your browser'"
]
serve = [
  "mkdocs serve -f docs/mkdocs.yml",
]

deploy = [
  "mkdocs gh-deploy --no-history -f docs/mkdocs.yml"
]

[tool.hatch.envs.types]
python = "3.12"
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest",
  "lxml-stubs",
  "types-setuptools",
  "types-docutils",
  "types-colorama",
  "types-Pygments",
  "types-termcolor",
  "types-requests",
  "types-PyYAML"

]

[tool.hatch.envs.types.scripts]
check = "mypy --exclude 'tests/cases/*' --no-incremental {args:.}"

[tool.mypy]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["isoduration", "isoduration.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["pygraphviz"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["f90nml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiida_workgraph.sockets.builtins"]
ignore_missing_imports = true
